Mostly fixed collapsed navbar...

--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,10 @@ body {
 .nav {
     background-color: #2A2A2A;
     width: 100%;
-    height: 65px;
+    /* height: 65px; */
     position: fixed;
     line-height: 65px;
-    text-align: center;
+    /* text-align: center; */
     border-top-style: solid;
     border-top-width: 5px;
     border-top-color: #003169;
@@ -50,8 +50,8 @@ body {
 }
 
 .nav ul {
-    height: 65px;
-    float: right;
+    /* height: 65px; */
+    /* float: right; */
 }
 
 .nav ul li {
